# PSE

./: .gitignore  ClassificationUsecase.uxf  IOUML.uxf  Specifications.txt  TrainUsecase.uxf  objectDetectionUsecase.uxf  topologyUML.uxf  viewFinal.uxf  viewUML.uxf
ImplementationPhase/: .gitignore  CMakeLists.txt  CMakeLists.txt.bac  info.txt  main.cpp
ImplementationPhase/Controller/: CMakeLists.txt
ImplementationPhase/Controller/CommunicationModule/: CMakeLists.txt
ImplementationPhase/Controller/CommunicationModule/include/: ASICChannel.hpp  CPUChannel.hpp  Channel.hpp  FPGAChannel.hpp  GPUChannel.hpp
ImplementationPhase/Controller/CommunicationModule/src/: Channel.cpp
ImplementationPhase/Controller/ControlFacade/: CMakeLists.txt
ImplementationPhase/Controller/ControlFacade/src/: ControllerFacade.cpp
ImplementationPhase/Controller/ControllerFacadeModule/: CMakeLists.txt
ImplementationPhase/Controller/ControllerFacadeModule/include/: ControllerFacade.hpp
ImplementationPhase/Controller/DispatcherModule/: CMakeLists.txt  DispatchManager.h  Mode.h
ImplementationPhase/Controller/EventHandlerModule/: CMakeLists.txt
ImplementationPhase/Controller/Inferencing/: CMakeLists.txt
ImplementationPhase/Controller/InferencingModule/: CMakeLists.txt
ImplementationPhase/Controller/NeuralNetworkAdapterModule/: CMakeLists.txt
ImplementationPhase/Controller/NeuralNetworkModelAdapterModule/: CMakeLists.txt
ImplementationPhase/Controller/Prediction/: CMakeLists.txt
ImplementationPhase/Controller/PredictionModule/: CMakeLists.txt
ImplementationPhase/Controller/ResultModelAdapterModule/: CMakeLists.txt
ImplementationPhase/Controller/ResultmanagerAdapterModule/: CMakeLists.txt
ImplementationPhase/Controller/Training/: CMakeLists.txt
ImplementationPhase/Data/testdata/: TestNeuralNetworkRead.txt  testImageLocations.txt
ImplementationPhase/Model/: CMakeLists.txt
ImplementationPhase/Model/DatastructurePackage/: CMakeLists.txt
ImplementationPhase/Model/IO/: CMakeLists.txt  Data.cpp  file_io.cpp  file_io.hpp  multipleimage_io.hpp
ImplementationPhase/Model/IOModule/: Data.hpp  videofile_io.hpp
ImplementationPhase/Model/IOPackage/: CMakeLists.txt
ImplementationPhase/Model/ModelFacade/: CMakeLists.txt
ImplementationPhase/Model/ModelFacadePackage/: CMakeLists.txt
ImplementationPhase/Model/NeuralNetworkModelModule/: CMakeLists.txt
ImplementationPhase/Model/Parsing/: CMakeLists.txt
ImplementationPhase/Model/ParsingPackage/: CMakeLists.txt
ImplementationPhase/Model/ResultModel/: CMakeLists.txt  Result.cpp  Result.h  ResultManager.cpp  ResultManager.h
ImplementationPhase/Model/ResultModelModule/: CMakeLists.txt
ImplementationPhase/Model/Training/: CMakeLists.txt
ImplementationPhase/Model/VideoHandlingPackage/: CMakeLists.txt
ImplementationPhase/OpenCL/: GEMM  MatrixMultiplication.cpp  VectorAdditionTest.cpp  cmdoptions.hpp  gemm.cl  gemm.cpp
ImplementationPhase/OpenCL/OpenCLFunctionality/: CMakeLists.txt
ImplementationPhase/OpenCL/Test1/: MatrixMultiplication.cpp  VectorAdditionTest.cpp  cmdoptions.hpp
ImplementationPhase/OpenCL/Test2/: Makfile
ImplementationPhase/OpenCL/Test3/: MatrixMultiplication.cpp  MatrixMultiplication.hpp
ImplementationPhase/OpenCLFunctionality/: CMakeLists.txt
ImplementationPhase/Presentation/: colloqium_Implementation.odp
ImplementationPhase/View/: CMakeLists.txt  ImageClassifcation.qml  ImageClassification.pro  PSE.pro  classificationresultpanel.cpp  classificationresultpanel.h  classificationresultpanel.ui  contentview.cpp  contentview.h  detectioncontrolpanel.cpp  detectioncontrolpanel.h  detectioncontrolpanel.ui  detectionresultpanel.cpp  detectionresultpanel.h  detectionresultpanel.ui  devicecheckboxmanager.cpp  devicecheckboxmanager.h  devicecheckboxmanager.ui  imageclass.ui  imageclassificationcontrolpanel.cpp  imageclassificationcontrolpanel.h  imageclassificationcontrolpanel.ui  inferencepage.cpp  inferencepage.h  inferencepage.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  objectdetectioninferencepage.cpp  objectdetectioninferencepage.h  objectdetectioninferencepage.ui  topology.cpp  topology.h  topology.ui  training.cpp  training.h  training.ui  viewfacade.cpp  viewfacade.h
ImplementationPhase/View/ExternalTestClassesView/: CMakeLists.txt
ImplementationPhase/View/RendererModule/: CMakeLists.txt
ImplementationPhase/View/ViewFacadeModule/: CMakeLists.txt
ImplementationPhase/View/ViewModule/: CMakeLists.txt
ImplementationPhase/View/src/: main.cpp
ImplementationPhase/build-ImageClassification-Desktop_Qt_5_12_6_MinGW_64_bit-Debug/: Makefile.Debug  Makefile.Release  object_script.ImageClassification.Debug  object_script.ImageClassification.Release  ui_classificationresultpanel.h  ui_detectioncontrolpanel.h  ui_detectionresultpanel.h  ui_devicecheckboxmanager.h  ui_imageclassificationcontrolpanel.h  ui_inferencepage.h  ui_mainwindow.h  ui_objectdetectioninferencepage.h  ui_render.h  ui_topology.h  ui_training.h
ImplementationPhase/build-ImageClassification-Desktop_Qt_5_12_6_MinGW_64_bit-Debug/debug/: moc_classificationresultpanel.cpp  moc_detectioncontrolpanel.cpp  moc_detectionresultpanel.cpp  moc_devicecheckboxmanager.cpp  moc_imageclassificationcontrolpanel.cpp  moc_inferencepage.cpp  moc_mainwindow.cpp  moc_objectdetectioninferencepage.cpp  moc_render.cpp  moc_topology.cpp  moc_training.cpp
ImplementationPhase/googletest-download/: CMakeLists.txt
ImplementationPhase/src/: main.cpp  math.cpp  math.hpp
ImplementationPhase/test/: CMakeLists.txt  Test.cpp  Test.cpp~  TestNNAccuracy.cpp
ImplementationPhase/test/Controller/: CMakeLists.txt  ControllerTest.cpp  ControllerTest.hpp
ImplementationPhase/test/InferencingModuleTests/: CMakeLists.txt
ImplementationPhase/test/Model/: CMakeLists.txt  CMakeLists.txt~  ModelTest.cpp  ModelTest.hpp
ImplementationPhase/test/View/: CMakeLists.txt  DisplayImage.cpp
ImplementationPhase/testdata/readdir/: TestNeuralNetworkRead.txt
ImplementationPhase/testdata/writedir/: TestNeuralNetworkWrite.txt
(+987 files in other folders)
