cmake_minimum_required(VERSION 3.10)

link_libraries(gtest)
link_libraries(gtest_main)

add_subdirectory(Model)
#add_subdirectory(View)
#add_subdirectory(Controller)

add_executable(ProjectTest "Test.cpp")
target_link_libraries(ProjectTest PUBLIC ${OpenCV_LIBS})
target_link_libraries(ProjectTest PUBLIC DATA)
target_link_libraries(ProjectTest PUBLIC  IO)
target_link_libraries(ProjectTest PUBLIC CLASSIFICATIONRESULTPARSER)
target_link_libraries(ProjectTest PUBLIC CLASSPROBABILITYPARSER)
target_link_libraries(ProjectTest PUBLIC DETECTIONRESULTPARSER)
target_link_libraries(ProjectTest PUBLIC IMAGEPARSING)
target_link_libraries(ProjectTest PUBLIC LINEBREAKPARSER)
target_link_libraries(ProjectTest PUBLIC PARSER)
target_link_libraries(ProjectTest PUBLIC DETECTIONDATAPARSER)
target_link_libraries(ProjectTest PUBLIC ACTIVATIONLAYER)
target_link_libraries(ProjectTest PUBLIC CONVOLUTIONLAYER)
target_link_libraries(ProjectTest PUBLIC DENSELAYER)
target_link_libraries(ProjectTest PUBLIC FLATTENLAYER)
target_link_libraries(ProjectTest PUBLIC ACTIVATIONLAYER)
target_link_libraries(ProjectTest PUBLIC DENSELAYER)
target_link_libraries(ProjectTest PUBLIC FLATTENLAYER)
target_link_libraries(ProjectTest PUBLIC RELULAYER)
target_link_libraries(ProjectTest PUBLIC ${OpenCV_LIBS})
target_link_libraries(ProjectTest PUBLIC NEURALNETWORKFACTORY)
target_link_libraries(ProjectTest PUBLIC NETWORKLAYER)
target_link_libraries(ProjectTest PUBLIC NEURALNETWORKPARSER)
target_link_libraries(ProjectTest PUBLIC NEURALNETWORK)
target_link_libraries(ProjectTest PUBLIC LAYERPARSER)
target_link_libraries(ProjectTest PUBLIC FACTORY)
target_link_libraries(ProjectTest PUBLIC BOUNDINGBOX)
target_link_libraries(ProjectTest PUBLIC CLASSPROBABILITY)
target_link_libraries(ProjectTest PUBLIC CLASSIFICATIONRESULT)
target_link_libraries(ProjectTest PUBLIC DETECTIONDATA)
target_link_libraries(ProjectTest PUBLIC BOUNDINGBOXPARSER)
target_link_libraries(ProjectTest PUBLIC DETECTIONRESULT)
target_link_libraries(ProjectTest PUBLIC CLASSIFICATIONDATASETFACADE)
target_link_libraries(ProjectTest PUBLIC CLASSIFICATIONRESULT)
target_link_libraries(ProjectTest PUBLIC DETECTIONDATAFACADE)
target_link_libraries(ProjectTest PUBLIC DETECTIONDATA)
target_link_libraries(ProjectTest PUBLIC ${OpenCV_LIBS})
target_link_libraries(ProjectTest PUBLIC IMAGEFACADE)
target_link_libraries(ProjectTest PUBLIC MODELFACADE)
target_link_libraries(ProjectTest PUBLIC NEURALNETWORKFACADE)
target_link_libraries(ProjectTest PUBLIC NEURALNETWORK)
target_link_libraries(ProjectTest PUBLIC RESULTMANAGER)
target_link_libraries(ProjectTest PUBLIC OpenCL::OpenCL)
target_link_libraries(ProjectTest PUBLIC NEXTHANDLER)
target_link_libraries(ProjectTest PUBLIC PREVHANDLER)
target_link_libraries(ProjectTest PUBLIC NEWRESULTHANDLER)
target_link_libraries(ProjectTest PUBLIC VIEW_MODULE)
target_link_libraries(ProjectTest PUBLIC NEURALNETWORKPAGER)
target_link_libraries(ProjectTest PUBLIC IMAGEPAGER)
target_link_libraries(ProjectTest PUBLIC VIEW_MODULE)
target_link_libraries(ProjectTest PUBLIC STARTHANDLER)
target_link_libraries(ProjectTest PUBLIC INFERENCINGDISTRIBUTORCLASSIFICATION)
target_link_libraries(ProjectTest PUBLIC VIEW_MODULE )
target_link_libraries(ProjectTest PUBLIC PREDICTIONHANDLER)
target_link_libraries(ProjectTest PUBLIC VIEW_MODULE)
target_link_libraries(ProjectTest PUBLIC NEXTHANDLER)
target_link_libraries(ProjectTest PUBLIC PREVHANDLER)
target_link_libraries(ProjectTest PUBLIC NEWRESULTHANDLER)
target_link_libraries(ProjectTest PUBLIC VIEW_MODULE)
target_link_libraries(ProjectTest PUBLIC NEURALNETWORKPAGER)
target_link_libraries(ProjectTest PUBLIC IMAGEPAGER)
target_link_libraries(ProjectTest PUBLIC VIEW_MODULE)
target_link_libraries(ProjectTest PUBLIC STARTHANDLER)
target_link_libraries(ProjectTest PUBLIC VIEW_MODULE INFERENCINGDISTRIBUTORCLASSIFICATION)
target_link_libraries(ProjectTest PUBLIC PREDICTIONHANDLER)
target_link_libraries(ProjectTest PUBLIC VIEW_MODULE)
